<resources>
    <string name="app_name">ESMS - Gestion Étudiants</string>

    <!-- Login -->
    <string name="login_title">Connexion</string>
    <string name="login_subtitle">Système de Gestion des Étudiants</string>
    <string name="username_hint">Nom d\'utilisateur</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="login_error_empty">Veuillez remplir tous les champs</string>
    <string name="login_error_failed">Authentification échouée</string>
    <string name="login_loading">Connexion en cours...</string>
    <string name="no_account">Pas de compte ?</string>
    <string name="register_link">S\'inscrire</string>

    <!-- Register -->
    <string name="register_title">Inscription</string>
    <string name="register_subtitle">Créer un nouveau compte</string>
    <string name="full_name_hint">Nom complet</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Téléphone</string>
    <string name="confirm_password_hint">Confirmer le mot de passe</string>
    <string name="register_button">S\'inscrire</string>
    <string name="already_have_account">Vous avez déjà un compte ?</string>
    <string name="login_link">Se connecter</string>

    <!-- Home -->
    <string name="home_welcome">Bienvenue</string>
    <string name="home_menu_students">Gestion des Étudiants</string>
    <string name="home_menu_logout">Déconnexion</string>

    <!-- General -->
    <string name="error_general">Une erreur est survenue</string>
    <string name="loading">Chargement...</string>

    <!-- Navigation Menu -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    
    <!-- Menu Items -->
    <string name="menu_home">Accueil</string>
    <string name="menu_dashboard">Tableau de bord</string>
    <string name="menu_students">Étudiants</string>
    <string name="menu_users">Utilisateurs</string>
    <string name="menu_profile">Mon Profil</string>
    <string name="menu_absences">Mes Absences</string>
    <string name="menu_notes">Mes Notes</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_other">Autres</string>
    <string name="menu_logout">Déconnexion</string>
    
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>